UpdateProduct 스키마 제거
